--- a/Frontend/src/page/LoginPage.css
+++ b/Frontend/src/page/LoginPage.css
@@ -54,7 +54,7 @@ html, body {
 }
 
 /* Main Content */
-.main-content {
+.main-content1 {
     display: flex;
     justify-content: center;
     align-items: center;
